--- a/style.css
+++ b/style.css
@@ -199,3 +199,16 @@ body {
     z-index: 0; /* Fica atrás de todo o conteúdo */
     object-fit: cover; /* Garante que o vídeo cubra toda a tela sem distorcer */
 }
+
+/*#game-over-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;  /////Fica atrás do botão
+    object-fit: cover;
+} */
