--- a/style.css
+++ b/style.css
@@ -202,22 +202,21 @@ body {
 
 @media (max-width: 600px) {
     #game-board {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding: 0 8px;
     }
 
     #game-board .card {
-        width: calc(33.33% - 8px);
+        width: 100%;
         height: auto;
         aspect-ratio: 7 / 10;
     }
 
-    .letter {
-        font-size: 1rem;
-        line-height: 1.6;
-    }
-
     .game-title {
-        font-size: 2rem;
+        font-size: 2.2rem;
+    }
+    
+    .letter {
+        font-size: 1.1rem;
+        line-height: 1.7;
     }
 }
